added Info section and media queries for tablet and phone

--- a/less/global.less
+++ b/less/global.less
@@ -38,11 +38,12 @@ p {
 .container {
   max-width: 1024px;
   width: 100%;
+  padding: 0 1rem;
   margin: 0 auto;
 }
 
 section {
-  padding: 5rem 0;
+  padding: 8rem 0;
 }
 
 .btn {
