--- a/less/variables.less
+++ b/less/variables.less
@@ -8,4 +8,4 @@
 // Media Queries
 @phone: ~"screen and (max-width: 500px)";
 
-@tablet: ~"screen and (max-width: 800px);";
+@tablet: ~"screen and (max-width: 800px)";
