--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,14 @@
 header {
   width: 100%;
-  height: 100vh;
+
+  .fixed {
+    position: fixed;
+    top: 0;
+  }
+
+  .nav-spacer {
+    height: 56px;
+  }
 
   nav {
     background: @grey;
@@ -11,7 +19,7 @@ header {
 
     a {
       font-family: @sub-font;
-      font-size: 1.5rem;
+      font-size: 1.8rem;
       font-weight: 500;
       color: #fff;
       text-decoration: none;
@@ -26,6 +34,11 @@ header {
         &:last-of-type {
           padding-right: 0;
         }
+
+        &:hover {
+          transition: all 0.2s ease-in-out;
+          color: @red;
+        }
       }
     }
   }
@@ -35,6 +48,10 @@ header {
   background: @black;
   .Hero-content {
     .flex(row, space-between, center);
+
+    @media @phone {
+      .flex(column, space-between, center);
+    }
 
     h1 {
       color: #fff;
@@ -54,7 +71,7 @@ header {
       padding-right: 2.5rem;
 
       @media @phone {
-        padding-right: 0;
+        display: none;
       }
 
       img {
@@ -65,6 +82,16 @@ header {
 
     .Hero-text {
       width: 50%;
+
+      @media @phone {
+        width: 80%;
+      }
+
+      .btn {
+        a {
+          box-shadow: 1px 1px 6px 0px rgba(0, 0, 0, 0.5);
+        }
+      }
     }
   }
 }
