--- a/less/navigation.less
+++ b/less/navigation.less
@@ -19,7 +19,7 @@ header {
 
     a {
       font-family: @sub-font;
-      font-size: 1.8rem;
+      font-size: 2rem;
       font-weight: 500;
       color: #fff;
       text-decoration: none;
@@ -29,6 +29,8 @@ header {
       .flex(row, space-between, center);
 
       a {
+        font-size: 1.8rem;
+        text-transform: uppercase;
         padding-right: 2.5rem;
 
         &:last-of-type {
