--- a/css/index.css
+++ b/css/index.css
@@ -153,7 +153,7 @@ h3 {
 }
 p {
   font-size: 1.6rem;
-  line-height: 1.4;
+  line-height: 1.5;
 }
 .container {
   max-width: 1024px;
@@ -204,6 +204,7 @@ header {
 header .fixed {
   position: fixed;
   top: 0;
+  z-index: 9999;
 }
 header .nav-spacer {
   height: 56px;
@@ -380,7 +381,152 @@ footer {
   max-width: 230px;
 }
 #About {
-  background: #2f303a;
-  height: 500px;
+  display: flex;
+  background: #f5f5f5;
   width: 100%;
+}
+#About .About-team {
+  padding: 1rem;
+}
+#About .About-team .team-info {
+  margin-bottom: 1.5rem;
+}
+#About .About-team .team-info h2 {
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+#About .About-team .row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+@media screen and (max-width: 500px) {
+  #About .About-team .row {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+}
+#About .About-team .row .member-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+  background: #fff;
+  width: 32%;
+  height: 575px;
+  padding: 0 0 1.5rem;
+  margin: 1.5rem 0;
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+}
+@media screen and (max-width: 800px) {
+  #About .About-team .row .member-card {
+    height: auto;
+  }
+}
+@media screen and (max-width: 500px) {
+  #About .About-team .row .member-card {
+    height: auto;
+  }
+}
+@media screen and (max-width: 800px) {
+  #About .About-team .row .member-card {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+    width: 100%;
+    padding: 1.5rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  #About .About-team .row .member-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+    width: 100%;
+  }
+}
+#About .About-team .row .member-photo {
+  width: 150px;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  margin: 0 auto 1.5rem;
+}
+@media screen and (max-width: 800px) {
+  #About .About-team .row .member-photo {
+    width: 30%;
+    margin: 0;
+    border-radius: 50%;
+  }
+}
+@media screen and (max-width: 500px) {
+  #About .About-team .row .member-photo {
+    width: 50%;
+  }
+}
+#About .About-team .row .member-photo img {
+  width: 100%;
+}
+@media screen and (max-width: 800px) {
+  #About .About-team .row .member-photo img {
+    border-radius: 50%;
+  }
+}
+#About .About-team .row .member-bio {
+  flex: 1 0 auto;
+  padding: 0 1.5rem;
+}
+@media screen and (max-width: 800px) {
+  #About .About-team .row .member-bio {
+    width: 65%;
+    padding: 1.5rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  #About .About-team .row .member-bio {
+    width: 100%;
+  }
+}
+#About .About-team .row .member-bio h2,
+#About .About-team .row .member-bio h3 {
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
+@media screen and (max-width: 800px) {
+  #About .About-team .row .member-bio h2,
+  #About .About-team .row .member-bio h3 {
+    text-align: left;
+  }
+}
+@media screen and (max-width: 500px) {
+  #About .About-team .row .member-bio h2,
+  #About .About-team .row .member-bio h3 {
+    text-align: center;
+  }
+}
+#About .About-team .row .member-bio h2 {
+  font-size: 3.2rem;
+  text-transform: none;
+  margin-bottom: 0.5rem;
+}
+@media screen and (max-width: 500px) {
+  #About .About-team .row .member-bio {
+    text-align: center;
+  }
 }
