--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 .App {
   text-align: center;
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+.userCard {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
 }
 
 .App-logo {
