The skelton and place holders mostly in place, most of responsive work completed on header and footer

--- a/less/global.less
+++ b/less/global.less
@@ -10,4 +10,8 @@
     font-family: @regText;
     color: @mainText;
     background: @mainBG;
+
+    @media @desktop{
+      width: 100%;
+    }
   }
