--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,3 +1,9 @@
+.flexboxSetting(@direction: column, @justify: center, @align: center) {
+    display: flex;
+    flex-direction: @direction;
+    justify-content: @justify;
+    align-content: @align;
+}
 
 /* ---------- Decorations ---------- */
 /* BORDER RADIUS */
