--- a/css/index.css
+++ b/css/index.css
@@ -161,55 +161,53 @@ html {
   color: #FAFEFD;
   background: #00063A;
 }
+@media (min-width: 1000px) {
+  html {
+    width: 100%;
+  }
+}
 /*
 Will be styling logo and nav bar from this file. that is located in header section of the page.
 */
 header {
   width: 100%;
-  display: flexbox;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
 }
 header div {
-  display: flexbox;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
 }
 header div h1 {
-  display: flexbox;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
   text-align: center;
   color: #FECE02;
   font-family: 'Damion', cursive;
   font-size: 6rem;
   padding: 25px 0px;
   border-bottom: 1px dotted #AEADD7;
+  text-shadow: 3px 3px 10px black;
 }
 header ul {
-  display: flexbox;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
 }
 @media (min-width: 1000px) {
   header ul {
-    border: 2px solid red;
     width: 100%;
-    display: flexbox;
+    display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-content: center;
+    border-bottom: 1px dotted #AEADD7;
   }
 }
 header ul li {
-  display: flexbox;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
   text-align: center;
   padding: 15px 0px;
   border-bottom: 1px dotted #AEADD7;
@@ -217,10 +215,6 @@ header ul li {
 @media (min-width: 1000px) {
   header ul li {
     width: 20%;
-    display: flexbox;
-    flex-direction: row;
-    justify-content: center;
-    align-content: space-between;
     border: none;
   }
 }
@@ -228,4 +222,78 @@ header ul li a {
   text-decoration: none;
   color: #FAFEFD;
   font-size: 2rem;
+  text-shadow: 3px 3px 10px black;
+}
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+}
+footer p {
+  padding: 20px 0px;
+  font-size: 0.8rem;
+}
+article {
+  width: 90%;
+  margin: auto;
+}
+article div {
+  padding: 0% 0%;
+}
+img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  width: 75%;
+  margin: auto;
+  border-radius: 50px;
+}
+.socialMediaLinks {
+  width: 75%;
+  padding: 5% 0%;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  flex-wrap: nowrap;
+}
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 60px;
+  height: 60px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+}
+.fa:hover {
+  opacity: 0.7;
+}
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
 }
