--- a/less/navigation.less
+++ b/less/navigation.less
@@ -43,6 +43,7 @@ header{
                 text-decoration: none;
                 color: @mainText;
                 font-size: 2rem;
+                font-weight: bold;
                 text-shadow: 3px 3px 10px black;
             }
         }
