Set up axios call to data sci endpoint, added function to parse html in text for saltiest comment

--- a/src/components/users/user.scss
+++ b/src/components/users/user.scss
@@ -3,6 +3,8 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 10px;
+    // text-decoration: none;
+    color: rgb(108, 108, 119);
   }
 
   .cardGroup {
