--- a/css/index.css
+++ b/css/index.css
@@ -264,6 +264,7 @@ article #application {
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
+    border-bottom: 1px dotted White;
   }
 }
 article #application img {
@@ -348,6 +349,16 @@ article #contact {
   justify-content: center;
   align-content: center;
 }
+@media (min-width: 1000px) {
+  article #contact {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+  }
+}
 article #contact img {
   display: flex;
   flex-direction: column;
@@ -360,6 +371,12 @@ article #contact img {
   -moz-box-shadow: 9px 9px 10px rgba(0, 0, 0, 0.5);
   box-shadow: 9px 9px 10px rgba(0, 0, 0, 0.5);
 }
+@media (min-width: 1000px) {
+  article #contact img {
+    width: 49%;
+    margin: 5% auto;
+  }
+}
 article #contact .contactHeader {
   color: #AEADD7;
   font-size: 2rem;
@@ -367,12 +384,29 @@ article #contact .contactHeader {
   padding: 5% 0%;
   margin-left: 13%;
 }
+@media (min-width: 1000px) {
+  article #contact .contactHeader {
+    order: -2;
+    width: 100%;
+    text-align: center;
+    padding: 2% 0%;
+    margin-left: 0%;
+  }
+}
 article #contact .contactForm {
   width: 100%;
   padding: 5%;
   margin: 2% 0% 2% 0%;
   border: 1px dotted #FAFEFD;
   border-radius: 20px;
+}
+@media (min-width: 1000px) {
+  article #contact .contactForm {
+    width: 45%;
+    padding: 2% 1%;
+    order: -1;
+    border: none;
+  }
 }
 article #contact .contactForm p {
   margin: 5% 0 1% 0;
@@ -440,16 +474,29 @@ article #contact button {
   width: 85%;
   margin: auto;
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  flex-direction: column;
+  justify-content: center;
   align-content: center;
-  flex-wrap: wrap;
+}
+@media (min-width: 1000px) {
+  .teamCardSection {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+    flex-wrap: wrap;
+  }
 }
 .teamCard {
-  width: 45%;
+  width: 100%;
   border: 1px solid white;
   border-radius: 20px;
   margin: 5% auto;
+}
+@media (min-width: 1000px) {
+  .teamCard {
+    width: 45%;
+  }
 }
 .teamCard .teamPhoto {
   width: 100%;
@@ -457,15 +504,25 @@ article #contact button {
   padding: 5%;
 }
 .teamCard .name {
-  padding: 5%;
+  padding: 1%;
+  font-family: 'Patua One', cursive;
+  color: #AEADD7;
+  text-align: center;
+  font-size: 3rem;
 }
 .teamCard .role {
-  padding: 5%;
+  padding: 3%;
+  font-family: 'Roboto', sans-serif;
+  color: #FAFEFD;
+  text-align: center;
+  font-size: 2rem;
 }
+/* --------------- Back to Top Link Mobile View ---------------*/
 .backTop {
-  width: 90px;
+  width: 100px;
   align-self: flex-end;
   text-decoration: none;
+  font-size: 1rem;
   color: #FAFEFD;
   text-align: right;
   padding: 2%;
