--- a/src/components/users/user.scss
+++ b/src/components/users/user.scss
@@ -11,3 +11,15 @@
     padding: 40px 0px 40px 0px;
   }
 
+  .quote {
+    margin: 0px 20px;
+    max-width: 90%;
+    // align-self: flex-start;
+  }
+
+  .rightContent {
+    min-width: 200px;
+  }
+
+  //TODO: add media breakpoint for mobile
+
