--- a/less/home-page.less
+++ b/less/home-page.less
@@ -235,7 +235,7 @@ article{
 
     .teamPhoto{
         width: 100%;
-        border-radius: 20px;
+        border-radius: 50px;
         padding: 5%;
     }
 
@@ -253,6 +253,20 @@ article{
         color: @mainText;
         text-align: center;
         font-size: 2rem;
+    }
+
+    .aboutTeam{
+        padding: 3%;
+        font-family: @regText;
+        color: @mainText;
+        text-align: justify;
+        font-size: 1.6rem;
+    }
+}
+
+#projectLead {
+    @media @desktop{
+        margin: 5% 25%;
     }
 }
 
