--- a/src/components/users/user.scss
+++ b/src/components/users/user.scss
@@ -8,7 +8,10 @@
   }
 
   .cardGroup {
-    padding: 40px 0px 40px 0px;
+    // padding: 40px 0px 40px 0px;
+  }
+  #header {
+      padding: 20px 0px;
   }
 
   .quote {
