Add Damion font and update site title

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,9 @@
     color: white;
   }
 }
-// body {
-//   background: #041e42;
-// }
+.site-title {
+  font-family: 'Damion', cursive;
+  color: #ffcd00 !important;
+  font-size: 32px;
+  justify-content: center;
+}
