--- a/src/components/users/user.scss
+++ b/src/components/users/user.scss
@@ -21,7 +21,11 @@
   }
 
   .rightContent {
-    min-width: 200px;
+    min-width: 150px;
+  }
+
+  .score {
+    font-size: 1.5rem;
   }
 
   //TODO: add media breakpoint for mobile
