Add persistence for theme with localStorage

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,12 +7,12 @@
 }
 
 // Morton salt theme
-.ui.stackable.top.fixed.menu {
-  background: #041e42;
-  * {
-    color: white;
-  }
-}
+// .ui.stackable.top.fixed.menu {
+//   background: #041e42;
+//   * {
+//     color: white;
+//   }
+// }
 .site-title {
   font-family: 'Damion', cursive;
   color: #ffcd00 !important;
