--- a/src/App.scss
+++ b/src/App.scss
@@ -6,16 +6,39 @@
   align-content: center;
 }
 
-// Morton salt theme
-// .ui.stackable.top.fixed.menu {
-//   background: #041e42;
-//   * {
-//     color: white;
-//   }
-// }
 .site-title {
   font-family: 'Damion', cursive;
   color: #ffcd00 !important;
   font-size: 32px;
+  padding: 0 20px !important;
   justify-content: center;
+}
+
+.dark {
+  h1 {
+    color: #fff;
+  }
+}
+
+// Hero image
+.hero {
+  background-image: url('./assets/images/hackersalt.jpg');
+  background-size: cover;
+  height: 90vh;
+  background-position: 50% 50%;
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-top: -15px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  .cta {
+    font-weight: bold;
+    font-size: 18px;
+    background: #fff;
+    color: #041f42;
+    border-radius: 50px;
+    padding: 10px 20px;
+    margin-bottom: 35px;
+  }
 }
