--- a/src/components/users/user.scss
+++ b/src/components/users/user.scss
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: row;
     padding-bottom: 20px;
-    justify-content: space-around;
+    justify-content: center;
 }
   .cardGroup {
     // padding: 40px 0px 40px 0px;
@@ -20,7 +20,6 @@
   }
   .modeToggle {
       text-align: right;
-      
   }
 
   .quote {
