--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,11 @@
 .App {
-  text-align: center;
-  max-width: 400px;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
+    text-align: center;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+
+    @media only screen and (max-width: 767px) {
+        background-color: '#041f42';
+    }
 }
