--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,10 +4,6 @@ article{
     margin: 5% auto;
     .flexboxSetting();
 
-    @media @desktop{
-        //border: 3px solid red;
-    }
-
     #application{
         width: 100%;
         padding: 0% 0%;
@@ -26,6 +22,7 @@ article{
             margin: 10% auto;
             border-radius: 20px;
             .box-shadow(9px, 9px, 10px, 0.5);
+            border: 2px solid @logoHeading;
 
             @media @desktop{
                 width: 49%;
@@ -76,16 +73,13 @@ article{
             font-family: @logoText;
             font-size: 3rem;
             padding: 2% 0%;
-            border: 1px dotted @mainText;
+            //border: 1px dotted @mainText;
+            border: 2px solid @logoHeading;
             border-radius: 90px;
             margin: 5% auto;
             text-shadow: 3px 3px 10px black;
             text-decoration: none;
             .box-shadow(9px, 9px, 10px, 0.5);
-
-            @media @desktop{
-                width: 25%;
-            }
         }
     }
 
@@ -106,6 +100,7 @@ article{
             margin: 10% auto;
             border-radius: 20px;
             .box-shadow(9px, 9px, 10px, 0.5);
+            border: 2px solid @logoHeading;
 
             @media @desktop{
                 width: 49%;
@@ -160,6 +155,7 @@ article{
             border-radius: 20px;
             color: @mainText;
             background: @secondaryBG;
+            border: 2px solid @logoHeading;
         }
     }
 }
@@ -189,6 +185,7 @@ article{
     justify-content: space-evenly;
     align-items: center;
     .border-radius(30px);
+    border: 2px solid @logoHeading;
 }
 
 .fa:hover {
