--- a/src/components/users/user.scss
+++ b/src/components/users/user.scss
@@ -21,7 +21,10 @@
   .modeToggle {
       text-align: right;
   }
-
+  .loading {
+      display: flex;
+      justify-content: center;
+  }
   .quote {
     margin: 0px 20px;
     max-width: 90%;
