--- a/src/components/users/user.scss
+++ b/src/components/users/user.scss
@@ -11,9 +11,16 @@
     flex-direction: row;
     padding-bottom: 20px;
     justify-content: center;
+    @media (max-width: 995px){
+        flex-direction: column-reverse;
+        align-items: center;
+        text-align: center!important;
+    }
 }
-  .cardGroup {
-    // padding: 40px 0px 40px 0px;
+  .barChart {
+    @media (max-width: 800px){
+     display: none;
+    }
   }
   #header {
       padding: 20px 0px;
