Added loader to comment list, centered loader on userlist, changed color so it shows on both light and dark modes

--- a/src/components/users/user.scss
+++ b/src/components/users/user.scss
@@ -14,7 +14,6 @@
     @media (max-width: 995px){
         flex-direction: column-reverse;
         align-items: center;
-        text-align: center!important;
     }
 }
   .barChart {
@@ -22,6 +21,14 @@
      display: none;
     }
   }
+  .dark, .dark>* {
+    color: rgb(230, 230, 230);
+    // border: 1px solid red;
+}
+
+.lds-roller light {
+    background: black;
+}
   #header {
       padding: 20px 0px;
   }
