--- a/devdesk/src/App.css
+++ b/devdesk/src/App.css
@@ -21,16 +21,20 @@
 }
 
 .ticket-link {
+  text-decoration:none;
+  color: black;
+}
+
+.ticket-card  {
   width:23%;
   margin:1%;
   padding:1%;
   background:white;
   color:black;
-  text-decoration:none;
 }
 
 .ticket-card p {
- margin:4%;
+  margin: 4%;
 }
 
 /* Form Styles  DASHBOARD  */
