--- a/devdesk/src/App.css
+++ b/devdesk/src/App.css
@@ -13,6 +13,8 @@
 /* Dashboard Styles */
 .dashboard {
   background: rgb(141,233,105, 0.5) ;
+  border-radius:20px;
+  border:2px solid black;
   width: 80%;
   margin: 2% auto;
 }
