--- a/devdesk/src/App.css
+++ b/devdesk/src/App.css
@@ -73,11 +73,22 @@
 .ticket-card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
+
 .ticket-card p {
  margin:4%;
-
 }
 
+.ticket-header{
+  font-size:1.5rem;
+}
+
+.closed-ticket{
+  color:blue;
+}
+
+.open-ticket{
+  color:red;
+}
 /* Form Styles  DASHBOARD  */
 
 .form-div{
