--- a/devdesk/src/App.css
+++ b/devdesk/src/App.css
@@ -89,6 +89,42 @@
 .open-ticket{
   color:red;
 }
+
+/* Dynamic Ticket Styles */
+
+.dynamic-ticket{
+  background: rgb(141,233,105, 0.5) ;
+  border-radius:20px;
+  border:2px solid black;
+  width: 40%;
+  margin: 2% auto;
+}
+
+.dynamic-ticket h3 {
+  font-size:1.8rem;
+  margin-top:4%;
+}
+
+.dynamic-ticket p {
+  margin:4% 0%;
+}
+
+.dynamic-ticket button {
+  margin-bottom:4%;
+  background: #74BF56;
+  color: white;
+  border-radius: 20px;
+  font-size: 0.9rem;
+  font-weight: lighter;
+  padding: 0.5rem 1.5rem;
+  cursor: pointer;
+  outline: none;
+  bottom: 0;
+  text-decoration:none;
+  border: 2px solid black;
+}
+
+
 /* Form Styles  DASHBOARD  */
 
 .form-div{
