changed button styles for ticket cards

--- a/devdesk/src/App.css
+++ b/devdesk/src/App.css
@@ -78,6 +78,20 @@
  margin:4%;
 }
 
+.ticket-card button {
+  background: #74BF56;
+  color: white;
+  border-radius: 20px;
+  font-size: 0.9rem;
+  font-weight: lighter;
+  padding: 0.5rem 1.5rem;
+  cursor: pointer;
+  outline: none;
+  bottom: 0;
+  text-decoration:none;
+  border: 2px solid black;
+}
+
 .ticket-header{
   font-size:1.5rem;
 }
