--- a/devdesk/src/App.css
+++ b/devdesk/src/App.css
@@ -143,6 +143,8 @@
 
 .form-div{
   background: rgb(141,233,105, 0.5) ;
+  border-radius:20px;
+  border:2px solid black;
   width: 80%;
   margin: 2% auto;
 }
@@ -150,6 +152,14 @@
 .form-div h2{
   font-size:2rem;
   padding:2%;
+}
+
+.form-ticket h3{
+  font-size:1.5rem;
+}
+
+.form-ticket p{
+  margin:2%;
 }
 
 .form-div form {
@@ -166,13 +176,17 @@
 }
 
  .form-div button {
-   width:30%;
-   margin:0 auto;
-   background: #8DE969 ;
-   border:none;
-   padding:2%;
-   border-radius:10px;
-   cursor: pointer;
+  background: #74BF56;
+  color: white;
+  border-radius: 20px;
+  font-size: 0.9rem;
+  font-weight: lighter;
+  padding: 0.5rem 2rem;
+  cursor: pointer;
+  outline: none;
+  bottom: 0;
+  text-decoration:none;
+  border: 2px solid black;
  }
 
  /* Form Styles  SIGNUP/LOGIN  */
