--- a/basic_wallet_p/lambda-wallet/src/App.css
+++ b/basic_wallet_p/lambda-wallet/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.App,
+.main-container {
+  height: 100%;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
